# RCJzhaocycle

./: README.md
RCJzhaocycle/: .gitignore  CMakeLists.txt  PLAN.md  README.md  arc_binary.py  requirements.txt
RCJzhaocycle/include/: arc_detector.hpp  frame_remapper.hpp
RCJzhaocycle/remote_params/: arc_params_20260428_2249.json  arc_params_20260428_2254.json  arc_params_20260428_2255.json  arc_params_20260428_2256.json  arc_params_20260428_2300.json  arc_params_20260428_2301.json  arc_params_20260428_2339.json  arc_params_20260429_0010.json  arc_params_20260429_0012.json  arc_params_20260429_0016.json  arc_params_20260429_0017.json  arc_params_20260429_0019.json  arc_params_20260429_0020.json  arc_params_20260429_0021.json  arc_params_20260429_0030.json  arc_params_20260429_0031.json  arc_params_20260429_0033.json  arc_params_20260429_0034.json  arc_params_20260429_0035.json  arc_params_20260429_0036.json  arc_params_20260429_0037.json  arc_params_20260429_0040.json  arc_params_20260429_0042.json  arc_params_20260429_0043.json  arc_params_20260429_0047.json  arc_params_20260429_0048.json  arc_params_20260429_0049.json  arc_params_20260429_0050.json  arc_params_20260429_0051.json  arc_params_20260429_0052.json  arc_params_20260429_0053.json  arc_params_20260429_0055.json  arc_params_20260429_0056.json  arc_params_20260429_0057.json  arc_params_20260429_0058.json  arc_params_20260429_0059.json  arc_params_20260429_0104.json  arc_params_20260429_0105.json  arc_params_history.csv  latest_params.json  (+6 more)
RCJzhaocycle/scripts/: fetch_remote_params.sh  (+1 more)
(+8 files in other folders)
